completes feed view

--- a/app/assets/templates/feeds/index.jst.ejs
+++ b/app/assets/templates/feeds/index.jst.ejs
@@ -1,1 +1,11 @@
-<h1>hey index</h1>
+<h3>hey index</h3>
+<ul>
+  <%= console.log(feeds) %>
+  <% feeds.each(function(feed) { %>
+    <li>
+      <a href="#/feeds/<%= feed.get("id") %>">
+      <%= feed.get("title") %>
+    </a>
+    </li>
+  <% })%>
+</ul>
