--- a/app/assets/templates/feeds/show.jst.ejs
+++ b/app/assets/templates/feeds/show.jst.ejs
@@ -1,1 +1,11 @@
 <h3>Show that Feed!</h3>
+
+<ul>
+  <% feedEntries.each(function(feedEntry) { %>
+    <li>
+      <a href="<%= feedEntry.get("link") %>">
+        <%= feedEntry.escape("title") %>
+      </a>
+    </li>
+  <% }); %>
+</ul>
