--- a/app/assets/templates/feeds/show.jst.ejs
+++ b/app/assets/templates/feeds/show.jst.ejs
@@ -1,5 +1,8 @@
 <h3>Show that Feed!</h3>
 
+<button class="refresh">Refresh</button><br>
+<button class="back">Back to Index</button>
+
 <ul>
   <% feedEntries.each(function(feedEntry) { %>
     <li>
